2004-07-18  Dom Lachowicz <cinamod@hotmail.com>

	* configure.in: Bump version number (2.7.4)
	* rsvg.1: Add stuff to the man page
	* NEWS: Document newer developments
	
2004-07-19  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: made lighting work much better
	* rsvg-shapes.c: quit passing the gerror pointer to the image loader. It works better now with VFS now, I have no idea why though

2004-07-18  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c: made feImage work better, now it transforms it better.
	* rsvg-shapes.c: fixed filters on images and bounding boxes on images

2004-07-17  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.[ch]: Bug #147662
	
2004-07-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: rewrote some of the image code so it transforms the image correctly, pitty about loosing bilinear filtering, but we can get that back I suppose
	
2004-07-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c, rsvg-styles.c, rsvg-private.h: Made it remember how bit the vboxes of discrete layers are for alpha optimisations and better filter positioning

2004-07-12  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.1: Update documentation
	* configure.in: Fix build
	* test-rsvg.c: Refactor a bit - allow for saving to ICO or anything
	else that GdkPixbuf supports
	
2004-07-10  Dom Lachowicz <cinamod@hotmail.com>

	* *.c: Allow for different X & Y resolutions (DPI). This needs more work;
	probably need to change rsvg_parse_length().
	
2004-07-10  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Fix bug #145477 - RSVG can now handle relative
	paths to image resources
	* rsvg-file-util.c: Ditto
	
2004-07-09  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-styles.c: Fix bug #145392, by 
	timmacfarlane@blueyonder.co.uk (Tim Macfarlane)

2004-07-09  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-paint-server.c: Fix bug #145426
	
2004-06-30  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-css.h: Fix bug #145173